--- a/SampleSolrApp/Views/Shared/_Layout.cshtml
+++ b/SampleSolrApp/Views/Shared/_Layout.cshtml
@@ -21,9 +21,6 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -37,7 +34,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2021 - SampleSolrApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2021 - SampleSolrApp
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
