Start adding SolrNet

--- a/SampleSolrApp/Views/Home/Index.cshtml
+++ b/SampleSolrApp/Views/Home/Index.cshtml
@@ -1,4 +1,10 @@
-﻿<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿@model SampleSolrApp.Models.SearchResultsModel
+<div class="text-center">
+    <ul>
+    @foreach (var r in Model.Results)
+    {
+        <li>Product @r.Id @r.Name</li>
+                         
+    }
+    </ul>
 </div>
