--- a/SampleSolrApp/Views/Home/Index.cshtml
+++ b/SampleSolrApp/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model SampleSolrApp.Models.SearchResultsModel
 <div class="text-center">
-    <ul>
-    @foreach (var r in Model.Results)
-    {
-        <li>Product @r.Id @r.Name</li>
-                         
-    }
-    </ul>
+        @foreach (var r in Model.Results)
+        {
+            <div class="card">
+                <div class="card-body">
+                    @r.Name?.FirstOrDefault()
+                </div>
+            </div>
+        }
 </div>
