--- a/SampleSolrApp/Views/Shared/_Layout.cshtml
+++ b/SampleSolrApp/Views/Shared/_Layout.cshtml
@@ -1,27 +1,28 @@
-﻿<!DOCTYPE html>
+﻿@model SampleSolrApp.Models.SearchResultsModel
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Welcome to Megastore! 'Mega' means 'good', 'store' means 'thing'.</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-dark navbar-expand-sm navbar-toggleable-sm bg-dark border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SampleSolrApp</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                </ul>
-            </div>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MegaStore</a>
+            <form>
+                <div class="input-group">
+                  <div class="form-outline">
+                    <input type="search" name="q" class="form-control" value="@Model.Parameters.Q" placeholder="Search..." />
+                  </div>
+                  <button type="button" class="btn btn-primary">
+                    <i class="fas fa-search"></i>
+                  </button>
+                </div>
+            </form>
         </div>
     </nav>
 </header>
